k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doc-generator-staging
  labels:
    environment: staging
    app: davinci-doc-creator
